--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,25 @@
-# Logs
-logs
+# --- Dependencias y Compilación ---
+node_modules/
+dist/
+dist-ssr/
+.pnpm-debug.log*
+.vite/
+*.tsbuildinfo
+
+# --- Seguridad y Variables de Entorno ---
+.env
+.env*.local
+*.local
+
+# --- Supabase ---
+supabase/.temp/
+supabase/functions/.well-known/
+
+# --- Despliegue (Vercel) ---
+.vercel/
+
+# --- Logs y Debugging ---
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -7,18 +27,27 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# --- Archivos Generados (PDFs) ---
+*.pdf
 
-# Editor directories and files
+# --- Testing y Calidad de Código ---
+coverage/
+*.lcov
+.storybook-static/
+
+# --- Editores e IDEs ---
 .vscode/*
 !.vscode/extensions.json
-.idea
-.DS_Store
+.idea/
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+# --- Sistema Operativo (Windows/Mac) ---
+.DS_Store
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
